[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ProjectCreator.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Layers.gd" type="Script" id=3]
[ext_resource path="res://scenes/PaintBrush.gd" type="Script" id=4]
[ext_resource path="res://scenes/cross_list_scripts/Plus.gd" type="Script" id=5]
[ext_resource path="res://assets/shaders/Dots.gdshader" type="Shader" id=6]
[ext_resource path="res://scenes/Popup.gd" type="Script" id=7]
[ext_resource path="res://scenes/Mode.gd" type="Script" id=8]
[ext_resource path="res://scenes/Screen.gd" type="Script" id=9]
[ext_resource path="res://scenes/Info.gd" type="Script" id=10]
[ext_resource path="res://scenes/Position.gd" type="Script" id=11]
[ext_resource path="res://scenes/TextPort.gd" type="Script" id=12]
[ext_resource path="res://scenes/ProjectLoader.gd" type="Script" id=13]
[ext_resource path="res://scenes/Bg.gd" type="Script" id=14]
[ext_resource path="res://scenes/cross_list_scripts/Text.gd" type="Script" id=15]
[ext_resource path="res://scenes/view.gd" type="Script" id=16]
[ext_resource path="res://assets/icons/32px/text32.png" type="Texture" id=17]
[ext_resource path="res://assets/icons/32px/add32.png" type="Texture" id=18]
[ext_resource path="res://assets/icons/32px/paste32.png" type="Texture" id=19]
[ext_resource path="res://assets/themes/bg_transparent.tres" type="StyleBox" id=20]
[ext_resource path="res://scenes/size.gd" type="Script" id=21]
[ext_resource path="res://assets/icons/32px/eraser-tool32.png" type="Texture" id=22]
[ext_resource path="res://scenes/cross_list_scripts/EraserTool.gd" type="Script" id=23]
[ext_resource path="res://scenes/TextureLoader.gd" type="Script" id=24]
[ext_resource path="res://scenes/Paste.gd" type="Script" id=25]
[ext_resource path="res://assets/icons/32px/paintbrush32.png" type="Texture" id=26]
[ext_resource path="res://scenes/LeafList.gd" type="Script" id=27]
[ext_resource path="res://scenes/Sound.gd" type="Script" id=28]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/number = Vector2( 10, 10 )
shader_param/progress = 0.42
shader_param/diamondPixelSize = 10.0
shader_param/color_rgb = Vector3( 0, 0, 0 )
shader_param/color_alpha = 0.0

[sub_resource type="AudioStreamMicrophone" id=3]

[node name="Main" type="Node"]

[node name="System" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ViewContainer" type="ViewportContainer" parent="System"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 56.0
margin_right = -34.0
margin_bottom = -25.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="System/ViewContainer"]
size = Vector2( 1152, 672 )
transparent_bg = true
handle_input_locally = false
usage = 1
render_target_update_mode = 3

[node name="Bg" type="ColorRect" parent="System/ViewContainer/Viewport" groups=["NOT_LAYER"]]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 14 )

[node name="TextPort" type="TextEdit" parent="System/ViewContainer/Viewport" groups=["NOT_LAYER"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 12.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/read_only = ExtResource( 20 )
custom_styles/focus = ExtResource( 20 )
custom_styles/normal = ExtResource( 20 )
custom_styles/completion = ExtResource( 20 )
script = ExtResource( 12 )

[node name="Screen" type="TextureRect" parent="System/ViewContainer/Viewport"]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="view" type="Camera2D" parent="System/ViewContainer/Viewport" groups=["NOT_LAYER"]]
offset = Vector2( 576, 335 )
current = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 16 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Bar" type="Panel" parent="UI"]
anchor_right = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sound" type="Control" parent="UI/Bar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="UI/Bar/Sound"]
stream = SubResource( 3 )
autoplay = true
bus = "Record"

[node name="Record" type="Button" parent="UI/Bar/Sound"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -434.0
margin_right = -377.0
margin_bottom = 23.0
text = "RECORD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/Bar/Sound"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -370.0
margin_right = -328.0
margin_bottom = 24.0
disabled = true
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="UI/Bar/Sound"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -530.0
margin_top = 24.0
margin_right = -442.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="UI/Bar"]
margin_left = 712.0
margin_right = 768.0
margin_bottom = 23.0
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="UI/Bar"]
margin_left = 776.0
margin_right = 843.0
margin_bottom = 23.0
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/Bar"]
margin_right = 42.0
margin_bottom = 23.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="UI/Bar"]
margin_left = 48.0
margin_right = 90.0
margin_bottom = 23.0
text = "NEW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/Bar"]
margin_left = 96.0
margin_right = 138.0
margin_bottom = 23.0
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="UI/Bar"]
margin_left = 144.0
margin_right = 192.0
margin_bottom = 23.0
text = "CLEAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FgColor" type="ColorPickerButton" parent="UI/Bar"]
margin_left = 264.0
margin_right = 288.0
margin_bottom = 24.0
toggle_mode = false
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="OptionButton" parent="UI/Bar"]
margin_left = 200.0
margin_right = 264.0
margin_bottom = 23.0
hint_tooltip = "Cross mode"
text = "Blend"
align = 1
items = [ "Blend", null, false, 0, null, "Eraser", null, false, 1, null, "Pen", null, false, 2, null, "Blit", null, false, 3, null ]
selected = 0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeTag" type="Label" parent="UI/Bar"]
margin_left = 296.0
margin_right = 336.0
margin_bottom = 23.0
text = "Size:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size" type="SpinBox" parent="UI/Bar"]
margin_left = 336.0
margin_right = 400.0
margin_bottom = 23.0
min_value = 1.0
max_value = 64.0
value = 9.0
align = 1
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShaderButton" type="OptionButton" parent="UI/Bar"]
margin_left = 416.0
margin_right = 504.0
margin_bottom = 23.0
hint_tooltip = "Background"
text = "None"
items = [ "Checker", null, false, 0, null, "Dots", null, false, 1, null, "Lines", null, false, 2, null, "Solid", null, false, 3, null, "Texture", null, false, 4, null, "Transparent", null, false, 5, null, "None", null, false, 6, null ]
selected = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgColor" type="ColorPickerButton" parent="UI/Bar"]
margin_left = 504.0
margin_right = 528.0
margin_bottom = 24.0
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "For some reason this node also works when the signal is feed to
\"color_dropper_toggle_is_allowed()\"
function in the 
$Screen ---- node"
}

[node name="ZoomTag" type="Label" parent="UI/Bar"]
margin_left = 544.0
margin_right = 592.0
margin_bottom = 24.0
text = "Zoom:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zoom" type="SpinBox" parent="UI/Bar"]
margin_left = 592.0
margin_right = 656.0
margin_bottom = 23.0
min_value = 13.0
max_value = 1919.0
value = 100.0

[node name="ResTag" type="Label" parent="UI/Bar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -202.0
margin_right = -90.0
margin_bottom = 24.0
text = "- [ x ] - px"
align = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionTag" type="Label" parent="UI/Bar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_right = -2.0
margin_bottom = 24.0
size_flags_horizontal = 5
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AboutDialogue" type="WindowDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -152.5
margin_right = 235.0
margin_bottom = 175.5
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "ABOUT"
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextBox" type="RichTextLabel" parent="UI/AboutDialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
margin_bottom = -121.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="UI/AboutDialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -112.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="UI/AboutDialogue/Container"]
margin_right = 464.0
margin_bottom = 23.0
text = "INFO"

[node name="License" type="Button" parent="UI/AboutDialogue/Container"]
margin_top = 27.0
margin_right = 464.0
margin_bottom = 50.0
text = "LICENSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceCode" type="Button" parent="UI/AboutDialogue/Container"]
margin_top = 54.0
margin_right = 464.0
margin_bottom = 77.0
text = "GET SOURCE CODE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="Button" parent="UI/AboutDialogue/Container"]
margin_top = 81.0
margin_right = 464.0
margin_bottom = 104.0
text = "DOWNLOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProjectLoader" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -144.5
margin_right = 235.0
margin_bottom = 167.5
focus_mode = 2
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
current_dir = "/Projects/Godot Projects/Toonink"
current_path = "/Projects/Godot Projects/Toonink/"
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProjectCreator" parent="UI" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -72.5
margin_right = 235.0
margin_bottom = 87.5
theme = ExtResource( 1 )
resizable = false

[node name="TextureLoader" type="VBoxContainer" parent="UI"]
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = -25.0
alignment = 1
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layers" type="ItemList" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -249.0
margin_right = -10.0
margin_bottom = -9.0
auto_height = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Layers"]
margin_left = 16.0
margin_top = 144.0
margin_right = 220.0
margin_bottom = 169.0
text = "No layer selected"
align = 1

[node name="Add" type="Button" parent="UI/Layers"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -32.0
margin_right = 104.0
margin_bottom = -8.0
focus_mode = 0
text = "+ ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="UI/Layers"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = -8.0
text = "X REMOVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="UI/Layers"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -64.0
margin_right = 224.0
margin_bottom = -40.0
placeholder_text = "New Layer Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrossList" type="VBoxContainer" parent="UI"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = 40.0
margin_bottom = -25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paste" type="TextureButton" parent="UI/CrossList"]
margin_top = 264.0
margin_right = 32.0
margin_bottom = 296.0
toggle_mode = true
texture_normal = ExtResource( 19 )
script = ExtResource( 25 )

[node name="EraserTool" type="TextureButton" parent="UI/CrossList"]
margin_top = 300.0
margin_right = 32.0
margin_bottom = 332.0
hint_tooltip = "Eraser"
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="Text" type="TextureButton" parent="UI/CrossList"]
margin_top = 336.0
margin_right = 32.0
margin_bottom = 368.0
texture_normal = ExtResource( 17 )
script = ExtResource( 15 )

[node name="PaintBrush" type="TextureButton" parent="UI/CrossList"]
margin_top = 372.0
margin_right = 32.0
margin_bottom = 404.0
texture_normal = ExtResource( 26 )
script = ExtResource( 4 )

[node name="Plus" type="TextureButton" parent="UI/CrossList"]
margin_top = 408.0
margin_right = 32.0
margin_bottom = 440.0
hint_tooltip = "Add Profile"
texture_normal = ExtResource( 18 )
stretch_mode = 3
script = ExtResource( 5 )

[node name="LeafList" type="VBoxContainer" parent="UI"]
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 24.0
margin_right = 384.0
margin_bottom = -25.0
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Bar/Sound/Record" to="UI/Bar/Sound" method="_on_Record_pressed"]
[connection signal="pressed" from="UI/Bar/Sound/Save" to="UI/Bar/Sound" method="_on_Save_pressed"]
[connection signal="pressed" from="UI/Bar/About" to="UI/AboutDialogue" method="_on_About_pressed"]
[connection signal="pressed" from="UI/Bar/Load" to="UI/ProjectLoader" method="_projectloader" binds= [ 0 ]]
[connection signal="pressed" from="UI/Bar/New" to="UI/ProjectCreator" method="_projectcreator"]
[connection signal="pressed" from="UI/Bar/Save" to="UI/ProjectLoader" method="_projectloader" binds= [ 1 ]]
[connection signal="pressed" from="UI/Bar/Clear" to="System/ViewContainer/Viewport/Screen" method="create_new_image"]
[connection signal="color_changed" from="UI/Bar/FgColor" to="System/ViewContainer/Viewport/Screen" method="_on_FgColor_color_changed"]
[connection signal="item_selected" from="UI/Bar/Mode" to="System/ViewContainer/Viewport/Screen" method="_on_Mode_item_selected" binds= [ 2 ]]
[connection signal="item_selected" from="UI/Bar/Mode" to="UI/Bar/Mode" method="_on_Mode_item_selected"]
[connection signal="pressed" from="UI/Bar/Mode" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 2 ]]
[connection signal="value_changed" from="UI/Bar/size" to="UI/Bar/size" method="_on_size_value_changed"]
[connection signal="item_selected" from="UI/Bar/ShaderButton" to="System/ViewContainer/Viewport/Bg" method="_change_shader"]
[connection signal="item_selected" from="UI/Bar/ShaderButton" to="System/ViewContainer/Viewport/Screen" method="_on_ShaderButton_item_selected" binds= [ 4 ]]
[connection signal="pressed" from="UI/Bar/ShaderButton" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 4 ]]
[connection signal="color_changed" from="UI/Bar/BgColor" to="System/ViewContainer/Viewport/Screen" method="_on_BgColor_color_changed"]
[connection signal="popup_closed" from="UI/Bar/BgColor" to="System/ViewContainer/Viewport/Screen" method="create_mode" binds= [ 5 ]]
[connection signal="pressed" from="UI/Bar/BgColor" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 5 ]]
[connection signal="about_to_show" from="UI/AboutDialogue" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 0 ]]
[connection signal="popup_hide" from="UI/AboutDialogue" to="System/ViewContainer/Viewport/Screen" method="create_mode" binds= [ 0 ]]
[connection signal="pressed" from="UI/AboutDialogue/Container/Info" to="UI/AboutDialogue" method="_on_Info_pressed"]
[connection signal="pressed" from="UI/AboutDialogue/Container/License" to="UI/AboutDialogue" method="_on_License_pressed"]
[connection signal="pressed" from="UI/AboutDialogue/Container/SourceCode" to="UI/AboutDialogue" method="_on_SourceCode_pressed"]
[connection signal="pressed" from="UI/AboutDialogue/Container/Download" to="UI/AboutDialogue" method="_on_Download_pressed"]
[connection signal="about_to_show" from="UI/ProjectLoader" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 3 ]]
[connection signal="confirmed" from="UI/ProjectLoader" to="UI/ProjectLoader" method="save_confirmed"]
[connection signal="file_selected" from="UI/ProjectLoader" to="UI/ProjectLoader" method="_on_ProjectLoader_file_selected"]
[connection signal="popup_hide" from="UI/ProjectLoader" to="System/ViewContainer/Viewport/Screen" method="create_mode" binds= [ 3 ]]
[connection signal="about_to_show" from="UI/ProjectCreator" to="System/ViewContainer/Viewport/Screen" method="configure_mode" binds= [ 7 ]]
[connection signal="popup_hide" from="UI/ProjectCreator" to="System/ViewContainer/Viewport/Screen" method="create_mode" binds= [ 7 ]]
[connection signal="item_selected" from="UI/Layers" to="UI/Layers" method="_on_Layers_item_selected"]
[connection signal="pressed" from="UI/Layers/Add" to="UI/Layers" method="_on_Add_pressed"]
[connection signal="pressed" from="UI/Layers/Remove" to="UI/Layers" method="_on_Remove_pressed"]
[connection signal="text_entered" from="UI/Layers/LineEdit" to="UI/Layers" method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="UI/CrossList/Paste" to="UI/CrossList/Paste" method="_on_Paste_pressed"]
[connection signal="pressed" from="UI/CrossList/EraserTool" to="UI/CrossList/EraserTool" method="_on_Eraser_pressed"]
[connection signal="pressed" from="UI/CrossList/Text" to="UI/CrossList/Text" method="_on_Text_pressed"]
[connection signal="pressed" from="UI/CrossList/PaintBrush" to="UI/CrossList/PaintBrush" method="_on_PaintBrush_pressed"]
[connection signal="pressed" from="UI/CrossList/Plus" to="UI/CrossList/Plus" method="_on_Plus_pressed"]
